[project]
name = "comfycanvas"
description = "Canvas to use with ComfyUI"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/taabata/ComfyCanvas"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyCanvas"
Icon = ""
